# python-adventofcode

2023/: README.md  pyproject.toml
2023/day1/: day1.py
2023/day10/: day10.py  part1_test.txt  part2_test.txt
2023/day11/: day11.py  part1_test.txt  part2_test.txt
2023/day12/: day12.py  day12_test.py  part1_test.txt
2023/day2/: day2.py
2023/day3/: day3.py
2023/day4/: day4.py
2023/day5/: day5.py
2023/day6/: day6.py
2023/day7/: day7.py  part1_test.txt  part2_test.txt
2023/day8/: day8.py
2023/day9/: day9.py  part1_test.txt  part2_test.txt
2023/support/: fileio.py  runner.py  utils.py
2023/tests/day1/: day1_tests.py
2023/tests/day2/: day2_tests.py
2023/tests/day3/: day3_tests.py
2023/tests/day4/: day4_tests.py
2023/tests/day5/: day5_tests.py
2023/tests/day6/: day6_tests.py
2023/tests/day7/: day7_tests.py
